# rinha-backend-q1-2024-dotnet

./: .env  Awarean.BrayaOrtega.RinhaBackend.Q124.sln  Cargo.toml  Dockerfile.Application  Dockerfile.LoadBalancer  docker-compose.yaml  nginx.conf  ngnix.conf
Awarean.BrayaOrtega.RinhaBackend.Q124/: AppJsonSerializerContext.cs  Awarean.BrayaOrtega.RinhaBackend.Q124.csproj  Awarean.BrayaOrtega.RinhaBackend.Q124.http  Endpoints.cs  InitializeCacheFromDatabaseHostedService.cs  InitializeRedisBackgroundService.cs  Program.cs  SaveInBackgroundHostedService.cs  SynchronizeAccountHostedService.cs  UpdateRequestBackgroundService.cs  appsettings.Development.json  appsettings.json
Awarean.BrayaOrtega.RinhaBackend.Q124.Tests/: AccountTests.cs  Awarean.BrayaOrtega.RinhaBackend.Q124.Tests.csproj  UnitTest1.cs
Awarean.BrayaOrtega.RinhaBackend.Q124.Tests/IntegrationTests/: ApiTests.cs  CacheRepositoryTests.cs  RedisTransactionServiceTests.cs  RepositoryTests.cs  SynchronizeAccountBackgroundServiceTests.cs
Awarean.BrayaOrtega.RinhaBackend.Q124.Tests/UnitTests/: AccountTests.cs  SerializationTests.cs
Awarean.BrayaOrtega.RinhaBackend.Q124/Configurations/: ConfigurationExtensions.cs
Awarean.BrayaOrtega.RinhaBackend.Q124/Infra/: CacheRepository.cs  CachedRepository.cs  EfRepository.cs  ICachedRepository.cs  IDecoratedRepository.cs  IRepository.cs  NatsDecoratedRepo.cs  Repository.cs  RinhaBackendDbContext.cs  RinhaBackendDbContextModel.cs  (+2 more)
postgres/: create-tables.sql  postgres.conf  seed.sql
src/: endpoints.rs  lib.rs  main.rs  models.rs  schema.rs
tests/: endpoint_tests.rs
(+21 files in other folders)
